Terraform Project POC2/nat-gateways.tf
# Resource: aws_nat_gateway
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/nat_gateway

resource "aws_nat_gateway" "riogw1" {
  # The Allocation ID of the Elastic IP address for the gateway.
  allocation_id = aws_eip.rionat1.id

  # The Subnet ID of the subnet in which to place the gateway.
  subnet_id = aws_subnet.riopublic_1.id

  # A map of tags to assign to the resource.
  tags = {
    Name = "rioNAT 1"
  }
}

resource "aws_nat_gateway" "riogw2" {
  # The Allocation ID of the Elastic IP address for the gateway.
  allocation_id = aws_eip.rionat2.id

  # The Subnet ID of the subnet in which to place the gateway.
  subnet_id = aws_subnet.riopublic_2.id

  # A map of tags to assign to the resource.
  tags = {
    Name = "rioNAT 2"
  }
}
