Terraform Project POC2/subnets.tf
# Resource: aws_subnet
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/subnet

resource "aws_subnet" "riopublic_1" {
  # The VPC ID.
  vpc_id = aws_vpc.riomain.id

  # The CIDR block for the subnet.
  cidr_block = "192.168.0.0/18"

  # The AZ for the subnet.
  availability_zone = "us-east-1a"

  # Required for EKS. Instances launched into the subnet should be assigned a public IP address.
  map_public_ip_on_launch = true

  # A map of tags to assign to the resource.
  tags = {
    Name                        = "riopublic-us-east-1a"
    "kubernetes.io/cluster/rioeks" = "shared"
    "kubernetes.io/role/elb"    = 1
  }
}

resource "aws_subnet" "riopublic_2" {
  # The VPC ID
  vpc_id = aws_vpc.riomain.id

  # The CIDR block for the subnet.
  cidr_block = "192.168.64.0/18"

  # The AZ for the subnet.
  availability_zone = "us-east-1b"

  # Required for EKS. Instances launched into the subnet should be assigned a public IP address.
  map_public_ip_on_launch = true

  # A map of tags to assign to the resource.
  tags = {
    Name                        = "riopublic-us-east-1b"
    "kubernetes.io/cluster/rioeks" = "shared"
    "kubernetes.io/role/elb"    = 1
  }
}

resource "aws_subnet" "rioprivate_1" {
  # The VPC ID
  vpc_id = aws_vpc.riomain.id

  # The CIDR block for the subnet.
  cidr_block = "192.168.128.0/18"

  # The AZ for the subnet.
  availability_zone = "us-east-1a"

  # A map of tags to assign to the resource.
  tags = {
    Name                              = "rioprivate-us-east-1a"
    "kubernetes.io/cluster/rioeks"       = "shared"
    "kubernetes.io/role/internal-elb" = 1
  }
}

resource "aws_subnet" "rioprivate_2" {
  # The VPC ID
  vpc_id = aws_vpc.riomain.id

  # The CIDR block for the subnet.
  cidr_block = "192.168.192.0/18"

  # The AZ for the subnet.
  availability_zone = "us-east-1b"

  # A map of tags to assign to the resource.
  tags = {
    Name                              = "rioprivate-us-east-1b"
    "kubernetes.io/cluster/rioeks"       = "shared"
    "kubernetes.io/role/internal-elb" = 1
  }
}
